FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20150319:
  AUTHOR: bdrewery@FreeBSD.org

  USE_GITHUB has been updated to make GH_COMMIT optional.  Using this new
  scheme allows only setting the _tag_ or _commit hash_ in GH_TAGNAME and
  not having to know the hash for a tag.  This scheme will download a tarball
  that has a different checksum than before due to a changed directory name
  for extraction.

  GH_TAGNAME can now be any length of the hash as long as it is unique.  There
  is no longer a 7-character requirement.

  The following MASTER_SITES are provided to retain the old checksum and
  directory structure (that require GH_COMMIT):
    GH -> GHL
    GITHUB -> GITHUB_LEGACY

20150305:
  AUTHOR: olivierd@FreeBSD.org

  Dependencies on the Xfce ports have been migrated to USES. Instead
  of USE_XFCE= configenv, you should use USES= xfce.

20150224:
  AUTHOR: makc@FreeBSD.org

  New USE_QT4 component has been introduced to reduce buildtime
  dependencies for Qt 4 ports that use localization support. Instead
  of USE_QT4=linguist you should now use USE_QT4=linguisttools_build.
  Conversion of existing ports may require USE_QT4 adjustment for
  missing components.

20141217:
  AFFECTS: users of lang/perl5.*
  AUTHOR: mat@FreeBSD.org

  Perl now links libperl.so with all .so it builds.  The stage-qa checks have
  been extended to check that libperl.so is in fact linked with .so in
  SITE_ARCH and errors out if none of the .so build by a port are linked with
  it.  It also checks that the rpath and runpath elf attributes are present.

20141130:
AUTHOR: tijl@FreeBSD.org

  The devel/gettext port has been split up in devel/gettext-runtime which