@@ -1,2 +1,2 @@
-SHA256 (freebsd-poudriere-3.1.99.20150319-80b7167.tar.gz) = cd7b51dd70bc7fa03bfbbd310f719172023f809cd3ec9b103996023ff187bd90
-SIZE (freebsd-poudriere-3.1.99.20150319-80b7167.tar.gz) = 2713351
+SHA256 (freebsd-poudriere-3.1.99.20150319-80b71q.tar.gz) = 43cc74b9675a160759d3670d60c4ed218b436ad3b0c6ed6ebe369a8b4841889f
+SIZE (freebsd-poudriere-3.1.99.20150319-80b71q.tar.gz) = 2713134
